# senseSpace

./: .gitignore  BACKWARD_COMPATIBILITY_ANALYSIS.md  CLI_PARAMETERS.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  POINTCLOUD_RECORDING_GUIDE.md  README.md  RECORDING_IMPLEMENTATION.md  SHOULDER_FLIPPING_SOLUTION.md  STREAMING_INTEGRATION.md  TCP_vs_UDP_GUIDE.md  VIDEO_METADATA_SPEC.md  VIDEO_RECORDING_GUIDE.md  VIDEO_STREAMING_GUIDE.md  check_recording.py  install_linux.md  install_mac.md  install_win.md  pyproject.toml  requirements.txt  setup.md  startServerLinux.sh  test_client_detection.py  test_multicast_receiver.sh  test_multicast_sender.sh  test_tpose_library_function.py
client/: README.md  miniClient.py  pointCloudClient.py  pointCloudClientViz.py  qt_client_viewer.py  senseSpaceClient.py  test_playback_timing.py
client/examples/: .env.example  README.md  llm.py  llm_ollama.py  minimal_client.py  requirements.txt
client/examples/basic/: README.md  basic1.py  basic2.py  basic3.py  basic4.py  basic5.py  basic6.py
client/examples/data/: README.md  expert_pose_config copy.json  expert_pose_config.json
client/examples/llm/: .env.example  README.md  chat.py  llm.py  llm_ollama.py  llm_ollama_expert.py  ollamaClient.py  requirements.txt
client/examples/recording/: README.md  pointcloud_recording_example.py  simple_recording.py  video_playback_example.py  video_recording_example.py
client/examples/skeletonOrientation/: simple_fk.py  skeletonOrientation.py  skeletonOrientation_FIXED.py
client/examples/speech/: README.md  README_Mac.md  pyoSimpleRecord.py  requirements.txt  simpleRecPlay.py  simpleRecord.py  simpleRecord_pyo.py  speech.py  speechClient.py  speechIO.py  speech_audio_io.py  whisperTest.py  whisperTest_listening.py
client/examples/streaming/: README.md  log.txt  streamingClient.py  test.py
client/examples/vecMath/: README.md  fence.py  vecExample.py
libs/senseSpaceLib/: README.md  pyproject.toml  setup.py  startServerLinux.sh
libs/senseSpaceLib/senseSpace/: __init__.py  body_tracking_filter.py  client.py  communication.py  enums.py  geometric_orientation.py  interpretation.py  llmClient.py  llmFrameAnalyzer.py  minimalClient.py  orientation_filter.py  protocol.py  recorder.py  server.py  vecMathHelper.py  video_streaming.py  video_streaming_server_v2.py  video_streaming_v2.py  visualization.py  vizClient.py  vizWidget.py
libs/senseSpaceLib/senseSpaceLib/: __init__.py
server/: README.md  install_segmentation.sh  pointCloudServer.py  qt_space_viewer.py  qt_viewer.py  requirements.txt  requirements_segmentation.txt  seg_pointcloud_server.py  senseSpaceServer.py  senseSpace_fusion_main.py  test_msgpack_protocol.py  test_protocol_compression.py
server/calib/: README.md  calib.json  calib1.json  calib2.json  test.json
server/src/: senseSpaceServer.py
students/: .gitignore  READMED.md
students/example_student/proj1/: proj1.py
students/example_student/proj2/: proj2.py
students/example_student/proj3/: proj3.py
