[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senseSpace"
version = "0.1.0"
description = "Distributed interactive media art environment for human interaction tracking"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Max Rheiner", email = "max.rheiner@zhdk.ch"}
]
dependencies = [
    "PyQt5>=5.15.0",
    "PyOpenGL>=3.1.5",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "msgpack>=1.0.0",
    "zstandard>=0.22.0",
    # Note: PyGObject (GStreamer bindings) should be installed via system packages:
    # Linux: sudo apt-get install python3-gi python3-gi-cairo
]

[project.optional-dependencies]
server = [
    # ZED SDK dependencies (if any pip-installable)
]
segmentation = [
    # MediaPipe-based segmentation server dependencies
    # Note: Install mediapipe with --no-deps to avoid numpy conflict with pyzed
    # Installation: pip install --no-deps mediapipe && pip install -e .[segmentation]
    "absl-py",
    "attrs>=19.1.0",
    "flatbuffers>=2.0",
    "jax",
    "jaxlib",
    "matplotlib",
    "opencv-contrib-python",
    "protobuf>=4.25.3,<5",
    "sentencepiece",
]
streaming = [
    # Video streaming dependencies (GStreamer)
    # IMPORTANT: PyGObject and GStreamer must be installed via system packages (not pip):
    # 
    # Linux (Ubuntu/Debian):
    #   sudo apt-get install python3-gi python3-gi-cairo \
    #       gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-good \
    #       gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav
    # 
    # macOS (Homebrew):
    #   brew install gstreamer gst-plugins-base gst-plugins-good \
    #       gst-plugins-bad gst-plugins-ugly pygobject3
    # 
    # Windows:
    #   Download installers from https://gstreamer.freedesktop.org/download/
    #   Install both runtime and development packages
    # 
    # No additional pip packages required - GStreamer uses system PyGObject
]

[tool.setuptools.packages.find]
where = ["libs"]